--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: configure
-      run: ./configure
+      run: |
+        sudo apt-get clean
+        sudo apt-get autoclean
+        sudo rm -rf /var/lib/apt/lists/
+        sudo apt-get update -qq
+        sudo apt-get install gcc-multilib
     - name: make
       run: make
     - name: make check
