--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,6 +19,7 @@ jobs:
         sudo apt-get autoclean
         sudo rm -rf /var/lib/apt/lists/
         sudo apt-get update -qq
+        sudo apt-get install g++
         sudo apt-get install gcc-multilib
     - name: make
       run: make
