--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: configure
+    - name: setup
       run: |
         sudo apt-get clean
         sudo apt-get autoclean
@@ -24,7 +24,6 @@ jobs:
       run: make
       
   push:
-    if: ${{ github.ref == 'main' }}
     needs: build
     runs-on: ubuntu-latest
     container: epitechcontent/epitest-docker
