--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,20 @@ jobs:
     - uses: actions/checkout@v3
     - name: make
       run: make
-      
+
+  tests:
+    needs: build
+
+    runs-on: ubuntu-latest
+    container: epitechcontent/epitest-docker
+    steps:
+      - name: empty_avm
+        run: |
+          cp tests/task00/task.avm ./tastk.avm
+          ./abstractvm task.avm > comp
+          rm task.avm
+          diff expexted comp
+
   push:
     if: github.ref == 'refs/heads/main'
     needs: build
