--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: CI
 
 on:
   push
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: empty_avm
         run: |
-          make
+          make re
           mv tests/task00/task.avm ./task.avm
           ./abstractVM task.avm > output
           diff output tests/task00/expected
