--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,7 +17,7 @@ jobs:
     needs: build
 
     runs-on: ubuntu-latest
-    if: always()
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v3
       - name: compilation
