--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -134,6 +134,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: compilation
         run: make
+      - name: big_number
+        if: always()
+        run: |
+          ./abstractVM tests/extra/task01/big_number.avm > output
+          diff output tests/extra/task01/expected
   push:
     if: github.ref == 'refs/heads/main'
     needs: [build, mandatory-tests]
