--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,6 +21,21 @@ jobs:
       - uses: actions/checkout@v3
       - name: compilation
         run: make al
+      - name: inline_comment
+        if: always()
+        run: |
+          ./abstractVM tests/mandatory/task01/inline_comment.avm > output
+          diff output tests/mandatory/task01/expected
+      - name: inline_comment2
+        if: always()
+        run: |
+          ./abstractVM tests/mandatory/task02/inline_comment2.avm > output
+          diff output tests/mandatory/task02/expected
+      - name: inline_comment3
+        if: always()
+        run: |
+          ./abstractVM tests/mandatory/task03/inline_comment3.avm > output
+          diff output tests/mandatory/task03/expected
       - name: assert
         if: always()
         run: |
@@ -134,6 +149,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: compilation
         run: make al
+      - name: big_number
+        if: always()
+        run: |
+          ./abstractVM tests/extra/task01/big_number.avm > output
+          diff output tests/extra/task01/expected
   push:
     if: github.ref == 'refs/heads/main'
     needs: [build, mandatory-tests]
